Styling fixes, alignment

--- a/src/styles/partials/_character-menu.scss
+++ b/src/styles/partials/_character-menu.scss
@@ -27,6 +27,10 @@
   }
 }
 
+.character-header {
+  justify-content: space-between;
+}
+
 .dropdown-menu {
   padding: 0;
   max-height: 400px;
